updating styles, fixing spacing removing some items

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,7 +1,7 @@
 body
 {
     overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
 .title
@@ -15,7 +15,7 @@ body
 
     margin: -20px;
 
-    padding: 30px;
+    padding: 20px;
 }
 
 .title i
@@ -23,35 +23,46 @@ body
     color: white;
 
     text-decoration: none;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .body-content
 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    font-size: 15px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .body-map iframe
 {
     margin-right: 60px;
-    height: 600px;
+    height: 400px;
+    width: 100%;
+    padding-bottom: 25px;
 }
 
 .body-content
 {
+    color: red;
+    font-weight: bold;
+
+    font-size: 20px;
+
     height: 700px;
 
     padding: 20px;
-    margin-right: 70px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .breakfast-menu
+{
+    display: grid;
+    grid-template-columns: 1fr;
+
+    width: 450px;
+}
+
+.lunch
 {
     display: grid;
     grid-template-columns: 1fr 1fr;
